CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Fluid panel resize and alignment fixes (STR #891)
	- Fl_Window::show(argc, argv) now sets the scheme before
	  showing the window; this should eliminate any
	  flickering between the standard and plastic schemes on
	  startup (STR #886)
	- Selected tabs are now drawn slightly larger than
	  unselected tabs so they stand out more (STR #882)
	- Round Plastic boxes now draw round (STR #841)
	- FL_PLASTIC_DOWN_BOX drew with artifacts (STR #852)
	- Changed initializations on WIN32 (STR #862)
	- Fl_Preferences::getUserdataPath() didn't work for
	  sub-groups (STR #872)
	- Fixed some redraw issues on Windows XP.
	- FLUID didn't set the initial size of widgets properly
	  (STR #850)
	- Fl_Tabs would steal focus away from its children on a
	  window focus change (STR #870)
	- filename_relative() now converts the current directory
	  to forward slashes as needed on WIN32 (STR #816)
	- Fl_File_Chooser::value() and ::directory() now handle
	  paths with backslashes on WIN32 (STR #811)
	- Added the standard rgb.txt file from X11 to the test
	  directory, allowing all platforms to try the colbrowser
	  demo (STR #843)
	- Resizing of OpenGL subwindows was broken on OSX (STR #804)
	- The fltk-config script now supports running from a
	  source directory (STR #840)
	- Fl_Browser_ didn't update the position properly when an
	  item was deleted (STR #839)
	- fl_contrast() now compares the luminosity of each color
	  (STR #837)
	- Fl_Input_ crashed on some platforms when wrapping
	  international text characters (STR #836)
	- Fixed some BMP images loading bugs (STR #825)
	- Fl_File_Chooser now returns directory names with a
	  trailing slash to avoid problems with relative
	  filenames (STR #819)
	- Fl_Help_View now supports the FONT and U elements (STR
	  #815)
	- OpenGL windows that were completely off-screen caused
	  problems with some graphics cards on WIN32 (STR #831)