@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fluid interactive window resizing fixe (STR #873, 791)
 	- Fluid panel resize and alignment fixes (STR #891)
 	- Fl_Window::show(argc, argv) now sets the scheme before
 	  showing the window; this should eliminate any
